objects/LLC_BI__Review__c.object
<CustomObject>
    <description>The Review object is used to track details of the review process for the relationships/ loans in nCino.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is available on the Account review record page. This is a Lookup that is automatically populated to the Account that the review was started from. It links the review record to the account. This is NOT available or needed on the Product Package review record page, because that review could be more multiple relationships and loans associated to the Product Package</description>
        <inlineHelpText>Lookup to the Account that is involved in the review.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Context_Key__c</fullName>
        <description>An identifier of the unique context that created the Review. Most often this ties back to a Credit Action request from a Relationship</description>
        <label>Context Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is used to look up the credit memo record that is associated to the review record. If a credit memo is configured for reviews, this field is automatically populated once a credit memo is generated.</description>
        <label>Credit Memo</label>
        <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lookup_Key__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Narrative__c</fullName>
        <description>This rich text field is optional and manually populated. It is used for the financial institution user to specify details and additional information about the review.</description>
        <label>Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package_Data__c</fullName>
        <description>This field is not customer facing and lives behind the scenes. It stores the JSON serialized sObject of the product package or the account in review.</description>
        <label>Product Package Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used only on the product package review record layout. And will be used only when the Financial Institution is initiating reviews from the Product Package. This field is a lookup to the product package the review record was initiated from and automatically populated.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Review_Type__c</fullName>
        <description>The picklist Is manually selected and optional. It  is used to specify the type of the Review being performed.(i.e. annual, monthly, adhoc, early warning, etc.) Configuration options would allow a financial institution to require this field and then write workflow or approval processes using the input from this field.</description>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>AdHoc</fullName>
                </value>
                <value>
                    <fullName>Problem Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is automatically populated and  is used to specify the status of the review. The review status field will be populated with &quot;in progress&quot; when a review record is initiated. Through configuration of approval processes, the review will be automatically placed as complete when an approval process is complete and approved. Or, this field can be manually updated to complete if there is no configuration to automate the status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cm_Review_Stage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Approval_Narrative__c</fullName>
        <description>Used to capture the approval information for the Review credit memo. Added for the Commercial Accelerate project.</description>
        <label>Approval Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cm_Are_you_requesting_a_grade_change__c</fullName>
        <label>Are You Requesting a Grade Change?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Collateral_Analysis_Narrative__c</fullName>
        <description>Used to capture the collateral analysis information for the Review credit memo. Added for the Commercial Accelerate project.</description>
        <label>Collateral Analysis Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Credit_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Current_Relationship_Risk_Rating__c</fullName>
        <label>Current Relationship Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Did_the_Covenants_pass_the_test__c</fullName>
        <label>If Yes, Did the Covenants Pass the Test?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Financial_Analyst_Narrative__c</fullName>
        <description>Used to capture the financial analysis information for the Review credit memo. Added for the Commercial Accelerate project.</description>
        <label>Financial Analyst Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Financial_Spreads_Borrower_Narrative__c</fullName>
        <description>Used to capture the borrower&apos;s financial information for the Review credit memo. Added for the Commercial Accelerate project.</description>
        <label>Financial Spreads Borrower Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Financial_Spreads_Property__c</fullName>
        <label>Financial Spreads Property</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Further_Analysis_Stress_Test__c</fullName>
        <description>Used to capture the stress test information for the Review credit memo. Added for the Commercial Accelerate project.</description>
        <label>Further Analysis Stress Test</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Guarantor_Narrative__c</fullName>
        <description>Used to capture the guarantor information for the Review credit memo. Added for the Commercial Accelerate project.</description>
        <label>Guarantor Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Have_the_covenants_been_tested__c</fullName>
        <label>Have the Covenants Been Tested?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loan Officer of Review record. Added for the Commercial Accelerate project.</description>
        <label>Loan Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_New_Policy_Exception_added__c</fullName>
        <label>New Policy Exception Added?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Recommend_Relationship_Rating__c</fullName>
        <label>Recommend Relationship Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Recommendation_Narrative__c</fullName>
        <description>Used to capture the recommendation information for the Review credit memo. Added for the Commercial Accelerate project.</description>
        <label>Recommendation Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Relationship_Summary__c</fullName>
        <description>Used to capture the relationship summary information for the Review credit memo. Added for the Commercial Accelerate project.</description>
        <label>Relationship Summary Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Review_Completion_Date__c</fullName>
        <label>Review Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cm_Review_Stage__c</fullName>
        <label>Review Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                    <default>true</default>
                    <label>Qualification</label>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Final Review</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Risk_Rating_Comments__c</fullName>
        <label>Risk Rating Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cm_Send_to_Credit_Committee__c</fullName>
        <label>Send to Credit Committee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Set_Next_Review_Date__c</fullName>
        <label>Set Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cm_Set_Next_Review_Type__c</fullName>
        <label>Set Next Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>AdHoc</fullName>
                </value>
                <value>
                    <fullName>Problem Loan</fullName>
                </value>
                <value>
                    <fullName>Early Warning</fullName>
                    <isActive>false</isActive>
                    <label>Early Warning</label>
                </value>
                <value>
                    <fullName>Interim</fullName>
                    <isActive>false</isActive>
                    <label>Interim</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                    <isActive>false</isActive>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                    <isActive>false</isActive>
                    <label>Quarterly</label>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                    <isActive>false</isActive>
                    <label>Semi-Annual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Strengths_Narrative__c</fullName>
        <description>Used to capture the strengths information for the Review credit memo. Added for the Commercial Accelerate project.</description>
        <label>Strengths Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Weakness_Narrative__c</fullName>
        <description>Used to capture the weakness information for the Review credit memo. Added for the Commercial Accelerate project.</description>
        <label>Weakness Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cm_Review_Committee_Approval_Queue_Review</fullName>
        <filterScope>Queue</filterScope>
        <label>Review Committee Approval Queue</label>
        <queue>cm_Review_Committee_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>R-{0}</displayFormat>
        <label>Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <recordTypes>
        <fullName>LLC_BI__Account_Review_Complete</fullName>
        <active>true</active>
        <description>Account Review Complete</description>
        <label>Account Review Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Account_Review_In_Progress</fullName>
        <active>true</active>
        <description>Account Review In Progress</description>
        <label>Account Review In Progress</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Package_Review_Complete</fullName>
        <active>true</active>
        <description>Package Review Complete</description>
        <label>Package Review Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Package_Review_In_Progress</fullName>
        <active>true</active>
        <description>Package Review In Progress</description>
        <label>Package Review In Progress</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Review_Validation_01</fullName>
        <active>true</active>
        <description>You Cannot Manually Change the Review Stage to Approval. Please Ensure That All Information is Accurate and Press the &apos;Submit for Approval&apos; Button at the Top of the Page. - RV01</description>
        <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED ( cm_Review_Stage__c )),
ISPICKVAL(cm_Review_Stage__c, &quot;Approval&quot;), TRUE)</errorConditionFormula>
        <errorMessage>You Cannot Manually Change the Review Stage to Approval. Please Ensure That All Information is Accurate and Press the &apos;Submit for Approval&apos; Button at the Top of the Page. - RV01</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Review_Validation_02</fullName>
        <active>true</active>
        <description>You Cannot Manually Change the Review to a Post Approval Stage. The Review Must be Approved by Pressing the &apos;Submit for Approval&apos; Button at the Top of the Page. - RV02</description>
        <errorConditionFormula>AND(
ISPICKVAL( cm_Review_Stage__c  , &apos;Complete&apos;),
ISBLANK( cm_Approved_Date__c ),
OR(
ISPICKVAL( cm_Review_Stage__c , &apos;Approval&apos;),
ISBLANK( cm_Approved_Date__c )),
$User.No_Validation__c = False)</errorConditionFormula>
        <errorMessage>You Cannot Manually Change the Review to a Post Approval Stage. The Review Must be Approved by Pressing the &apos;Submit for Approval&apos; Button at the Top of the Page. - RV02</errorMessage>
    </validationRules>
</CustomObject>